--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -459,7 +459,7 @@
  * Course Table names for Score Menu Save view
  */
 #define TEXT_MENU_BOB _(" 1 AZURE ABYSS")
-#define TEXT_MENU_WF _(" 2 WHOMP'S FORTRESS")
+#define TEXT_MENU_WF _(" 2 MOLTEN TREASURE CHEST")
 #define TEXT_MENU_JRB _(" 3 FLOWER FIELDS")
 #define TEXT_MENU_CCM _(" 4 COOL, COOL MOUNTAIN")
 #define TEXT_MENU_BBH _(" 5 BIG BOO'S HAUNT")
