Fixed boos in HF

--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -461,7 +461,7 @@
 #define TEXT_MENU_BOB _(" 1 AZURE ABYSS")
 #define TEXT_MENU_WF _(" 2 MOLTEN TREASURE CHEST")
 #define TEXT_MENU_JRB _(" 3 FLOWER FIELDS")
-#define TEXT_MENU_CCM _(" 4 COOL, COOL MOUNTAIN")
+#define TEXT_MENU_CCM _(" 4 HAUNTED FACTORY")
 #define TEXT_MENU_BBH _(" 5 BIG BOO'S HAUNT")
 #define TEXT_MENU_HMC _(" 6 HAZY MAZE CAVE")
 #define TEXT_MENU_LLL _(" 7 LETHAL LAVA LAND")
