--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -483,7 +483,7 @@
 #define TEXT_MENU_WMOTR _("   WING MARIO OVER THE RAINBOW")
 #define TEXT_MENU_SA _("   DICE FORTRESS")
 #define TEXT_MENU_NONE _("")
-#define TEXT_MENU_STARS _("   CASTLE SECRET STARS")
+#define TEXT_MENU_STARS _("   SECRET STARS")
 
 #define TEXT_MENU_BOB_FR _(" 1 BATAILLE DE BOB-OMB")
 #define TEXT_MENU_WF_FR _(" 2 FORTERESSE DE WHOMP")
