Bowser fight improvements

--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -474,7 +474,7 @@
 #define TEXT_MENU_TTC _("14 TICK TOCK CLOCK")
 #define TEXT_MENU_RR _("15 RAINBOW RIDE")
 #define TEXT_MENU_BITDW _("   BOWSER IN THE DARK WORLD")
-#define TEXT_MENU_BITFS _("   BOWSER IN THE FIRE SEA")
+#define TEXT_MENU_BITFS _("   THE FINAL FIGHT")
 #define TEXT_MENU_BITS _("   BOWSER IN THE SKY")
 #define TEXT_MENU_PSS _("   THE PRINCESS'S SECRET SLIDE")
 #define TEXT_MENU_COTMC _("   CAVERN OF THE METAL CAP")
