--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 *.so
 *.so.*
 *.dylib
+**/Thumbs.db*
 
 # Executables
 *.exe
@@ -119,3 +120,13 @@ lib/libs2d_engine.a
 
 !/sound/samples/streamed_audio/*.aiff
 !/levels/bdf/*.png
+
+!/levels/menu/main_menu_seg7.0D1A8.rgba16.png
+!/levels/menu/main_menu_seg7.0E1A8.rgba16.png
+
+!/sound/sequences/us/0D_menu_star_select.m64
+!/sound/sequences/us/01_cutscene_collect_star.m64
+!/sound/sequences/us/21_menu_file_select.m64
+!/sound/sequences/us/03_level_grass.m64
+!/sound/sequences/us/0E_event_powerup.m64
+!/sound/sequences/us/14_event_race.m64
