Added missing texture files

--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,7 @@ lib/libs2d_engine.a
 
 !/sound/samples/streamed_audio/*.aiff
 !/levels/bdf/*.png
+!/levels/vcutm/*.png
 
 !/levels/menu/main_menu_seg7.0D1A8.rgba16.png
 !/levels/menu/main_menu_seg7.0E1A8.rgba16.png
