--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -471,8 +471,8 @@
 #define TEXT_MENU_WDW _("11 WET-DRY WORLD")
 #define TEXT_MENU_TTM _("12 TALL, TALL MOUNTAIN")
 #define TEXT_MENU_THI _("13 TINY-HUGE ISLAND")
-#define TEXT_MENU_TTC _("14 TICK TOCK CLOCK")
-#define TEXT_MENU_RR _("15 RAINBOW RIDE")
+#define TEXT_MENU_TTC _("14 ASHELLERATED AUTOMATA")
+#define TEXT_MENU_RR _("15 DUAL RUSH")
 #define TEXT_MENU_BITDW _("   BOWSER IN THE DARK WORLD")
 #define TEXT_MENU_BITFS _("   THE FINAL FIGHT")
 #define TEXT_MENU_BITS _("   BOWSER IN THE SKY")
