Added credits text per course

--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -92,6 +92,20 @@
 #define TEXT_HUD_PRESS_L _("PRESS L TO SWITCH")
 #endif
 
+#define TEXT_CREATED_BY _("MADE BY ")
+#define TEXT_CREATOR_ARTHURTILLY _("ARTHURTILLY")
+#define TEXT_CREATOR_MUSHIE _("MUSHIE64")
+#define TEXT_CREATOR_REONU _("REONU")
+#define TEXT_CREATOR_AXOLLYON _("AXOLLYON")
+#define TEXT_CREATOR_GAEL _("THEGAEL95")
+#define TEXT_CREATOR_CRASH _("LINCRASH")
+#define TEXT_CREATOR_BRODUTE_AND _("BRODUTE")
+#define TEXT_CREATOR_BRODUTE _("BRODUTE")
+#define TEXT_CREATOR_DNVIC _("DNVIC")
+#define TEXT_CREATOR_ZENONX _("ZENONX")
+#define TEXT_CREATOR_SCUTTLE _("SCUTTLEBUG RAISER")
+#define TEXT_CREATOR_PIE _("SM64PIE")
+
 #if defined(VERSION_JP) || defined(VERSION_SH)
 
 /**
