Added map texture for DNVIC course

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,5 @@ lib/libs2d_engine.a
 !/sound/sequences/us/03_level_grass.m64
 !/sound/sequences/us/0E_event_powerup.m64
 !/sound/sequences/us/14_event_race.m64
+
+!/levels/wmotr/map.rgba16.png
